REST add search
