# api/openapi/books.yml
@@ -12,15 +12,29 @@ paths:
   /books:
     get:
       summary: Get all books
+      parameters:
+        - name: offset
+          in: query
+          description: Number of items to skip
+          schema:
+            type: integer
+            minimum: 0
+            default: 0
+        - name: limit
+          in: query
+          description: Maximum number of items to return
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+            default: 10
       responses:
         '200':
           description: A list of books
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Book'
+                $ref: '#/components/schemas/BookList'
     post:
       summary: Create a new book
       requestBody:
@@ -117,7 +131,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SearchResponse'
+                $ref: '#/components/schemas/BookList'
 components:
   schemas:
     Book:
@@ -155,7 +169,7 @@ components:
         - description
         - featured
         - summary
-    SearchResult:
+    BookItem:
       type: object
       properties:
         id:
@@ -176,18 +190,22 @@ components:
       required:
         - id
         - title
+        - author
         - image_link
         - summary
-    SearchResponse:
+    BookList:
       type: object
       properties:
-        total_results:
+        total:
           type: integer
           description: Total number of results
-        results:
+        items:
           type: array
           items:
-            $ref: '#/components/schemas/SearchResult'
+            $ref: '#/components/schemas/BookItem'
+      required:
+        - total
+        - items
     Error:
       type: object
       properties:
